--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run API Tests
-        run: newman run "Swagger.postman_collection.json" -e Production.postman_environment.json
+        run: newman run "Swagger.postman_collection.json" 
